#97 fix sonar